--- a/BeeHive/Base.lproj/Main_iPhone.storyboard
+++ b/BeeHive/Base.lproj/Main_iPhone.storyboard
@@ -235,7 +235,7 @@
                         <sections>
                             <tableViewSection headerTitle="" id="vWH-Vw-4II">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="K4S-qa-gYm" style="IBUITableViewCellStyleDefault" id="hOu-ds-MDa" customClass="SettingsCell">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="K4S-qa-gYm" style="IBUITableViewCellStyleDefault" id="hOu-ds-MDa">
                                         <rect key="frame" x="0.0" y="99" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="hOu-ds-MDa" id="tjd-XA-wu4">
@@ -256,7 +256,7 @@
                             </tableViewSection>
                             <tableViewSection headerTitle="" id="xCm-XL-qM6">
                                 <cells>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="K2i-j3-fHt" style="IBUITableViewCellStyleDefault" id="eb5-0X-f23">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="K2i-j3-fHt" style="IBUITableViewCellStyleDefault" id="eb5-0X-f23">
                                         <rect key="frame" x="0.0" y="163" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eb5-0X-f23" id="HlF-ac-Dpg">
@@ -276,7 +276,7 @@
                                             <segue destination="rYK-2D-vFc" kind="push" id="hYC-5y-zvR"/>
                                         </connections>
                                     </tableViewCell>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="kHm-m0-f0i" detailTextLabel="TSE-VO-pDs" style="IBUITableViewCellStyleValue1" id="18F-d0-5jS">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="SettingsCell" textLabel="kHm-m0-f0i" detailTextLabel="TSE-VO-pDs" style="IBUITableViewCellStyleValue1" id="18F-d0-5jS">
                                         <rect key="frame" x="0.0" y="207" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="18F-d0-5jS" id="ozz-eO-xDl">
