--- a/BeeHive/Base.lproj/Main_iPhone.storyboard
+++ b/BeeHive/Base.lproj/Main_iPhone.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13C1021" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8YX-ce-x5E">
     <dependencies>
         <deployment defaultVersion="1792" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
@@ -21,7 +21,7 @@
             </objects>
             <point key="canvasLocation" x="648" y="-114"/>
         </scene>
-        <!--Map View Controller - Campus Map-->
+        <!--Map View Controller - Map-->
         <scene sceneID="4et-jE-Iqx">
             <objects>
                 <viewController id="OCN-JD-Prk" customClass="BHMapViewController" sceneMemberID="viewController">
@@ -58,7 +58,7 @@
                             <constraint firstItem="e8F-W7-TY7" firstAttribute="top" secondItem="r7P-d1-euA" secondAttribute="bottom" id="uGY-F0-FRe"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Campus Map" id="C07-L9-4Wr">
+                    <navigationItem key="navigationItem" title="Map" id="C07-L9-4Wr">
                         <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="s7p-hX-oIP">
                             <connections>
                                 <action selector="refreshMap:" destination="OCN-JD-Prk" id="lFB-iL-yCE"/>
@@ -118,7 +118,7 @@
             </objects>
             <point key="canvasLocation" x="648" y="585"/>
         </scene>
-        <!--List View Controller - Locations-->
+        <!--List View Controller - List-->
         <scene sceneID="7mz-fw-dd9">
             <objects>
                 <viewController id="066-oP-BLn" customClass="BHListViewController" sceneMemberID="viewController">
@@ -183,7 +183,7 @@
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="List" image="second" id="SfM-Tm-IJ1"/>
-                    <navigationItem key="navigationItem" title="Locations" id="J9B-79-gVm">
+                    <navigationItem key="navigationItem" title="List" id="J9B-79-gVm">
                         <barButtonItem key="leftBarButtonItem" systemItem="refresh" id="YKE-K4-ErY">
                             <connections>
                                 <action selector="refreshList:" destination="066-oP-BLn" id="iBc-EG-uA6"/>
@@ -480,7 +480,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Statistics" id="ZDn-1h-7PC">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="Xf2-wN-vDA">
+                        <barButtonItem key="rightBarButtonItem" title="Go" id="Xf2-wN-vDA">
                             <connections>
                                 <action selector="contribute:" destination="rcr-x4-Ep4" id="JCz-cf-7ag"/>
                                 <segue destination="qZU-xY-L5M" kind="modal" identifier="showContributionView" modalTransitionStyle="coverVertical" id="vUZ-ts-n9l"/>
